template/bases/send-anything/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: aion-sendanything
  name: aion-sendanything
spec:
  selector:
    run: aion-sendanything
  type: NodePort
  ports:
    - name: envoy-grpc
      port: 10000
      protocol: TCP
      targetPort: 10000
    - name: envoy-admin
      port: 10001
      protocol: TCP
      targetPort: 10001
